--- a/fundamentals/types-variables/tutorial.ipynb
+++ b/fundamentals/types-variables/tutorial.ipynb
@@ -95,7 +95,7 @@
    "id": "5e47559c-6cf4-435d-a2de-126440fdd60e",
    "metadata": {},
    "source": [
-    "<div class="alert alert-block alert-info">
+    "<div class='alert alert-block alert-info'>
 ⚠️  Attention à la conversion *float* -\\> *int*, qui tronque la partie\n",
     "décimale.</div>\n",
     "\n",
