--- a/fundamentals/types-variables/tutorial.ipynb
+++ b/fundamentals/types-variables/tutorial.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(\"J'ai 19 charactères\")"
+    "len(\"J'ai 18 caractères\")"
    ]
   },
   {
