--- a/fundamentals/types-variables/tutorial.ipynb
+++ b/fundamentals/types-variables/tutorial.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "⚠️  Attention à la conversion *float* -\\> *int*, qui tronque la partie\n",
+    "⚠️  Attention à la conversion *float* ➔ *int*, qui tronque la partie\n",
     "décimale.</div>\n",
     "\n",
     "Les *floats* peuvent par ailleurs être écrits en notation scientifique :"
@@ -195,23 +195,25 @@
     "statistiques, notamment avec *NumPy* ou *Pandas*, produisant une erreur\n",
     "similaire qu’il faut alors débugger.\n",
     "\n",
-    "> **Debugger une erreur**\n",
-    ">\n",
-    "> Les erreurs de code sont un passage obligatoire et en réalité\n",
-    "> nécessaire de l’apprentissage d’un langage: c’est en debuggant les\n",
-    "> erreurs que notre code produit que l’on apprend à les éviter à\n",
-    "> l’avenir ! Pour ce faire, il est nécessaire de bien les comprendre en\n",
-    "> premier lieu.\n",
-    ">\n",
-    "> L’erreur ci-dessus, liée à la division par 0, a produit un\n",
-    "> `Traceback`, i.e. un log détaillé précisant à quelle étape des\n",
-    "> différentes opérations effectuées par Python s’est produite l’erreur,\n",
-    "> ainsi que le nom de l’erreur (`ZeroDivisionError`) et un descriptif\n",
-    "> (“division by zero”). En l’occurence, l’erreur est simple, le message\n",
-    "> permet donc de comprendre directement le problème. Pour des opérations\n",
-    "> plus compliquées, les noms et messages peuvent être moins évidents…\n",
-    "> mais néanmoins utiles pour comprendre la source de l’erreur - en les\n",
-    "> indiquant dans un moteur de recherche par exemple."
+    "<div class=\"alert alert-block alert-info\">\n",
+    " <b>Debugger une erreur</b>\n",
+    "\n",
+    " Les erreurs de code sont un passage obligatoire et en réalité\n",
+    " nécessaire de l’apprentissage d’un langage: c’est en debuggant les\n",
+    " erreurs que notre code produit que l’on apprend à les éviter à\n",
+    " l’avenir ! Pour ce faire, il est nécessaire de bien les comprendre en\n",
+    " premier lieu.\n",
+    "\n",
+    " L’erreur ci-dessus, liée à la division par 0, a produit un\n",
+    " `Traceback`, i.e. un log détaillé précisant à quelle étape des\n",
+    " différentes opérations effectuées par Python s’est produite l’erreur,\n",
+    " ainsi que le nom de l’erreur (`ZeroDivisionError`) et un descriptif\n",
+    " (“division by zero”). En l’occurence, l’erreur est simple, le message\n",
+    " permet donc de comprendre directement le problème. Pour des opérations\n",
+    " plus compliquées, les noms et messages peuvent être moins évidents…\n",
+    " mais néanmoins utiles pour comprendre la source de l’erreur - en les\n",
+    " indiquant dans un moteur de recherche par exemple.\n",
+    "</div>"
    ]
   },
   {
@@ -329,29 +331,31 @@
     "Erreur de syntaxe : la seconde apostrophe est comprise comme la fin du\n",
     "*string*, et Python ne sait pas interpréter le reste de la séquence.\n",
     "\n",
-    "> **Erreurs de syntaxe et exception**\n",
-    ">\n",
-    "> Depuis le début du TP, on a vu plusieurs erreurs produites par le\n",
-    "> code. En pratique, il est important de distinguer deux types d’erreurs\n",
-    "> :\n",
-    ">\n",
-    "> -   les **erreurs de syntaxe**: le code ne respecte pas les règles de\n",
-    ">     syntaxe de Python, comme l’erreur ci-dessus. Le `Traceback`\n",
-    ">     (message d’erreur) indique avec des flèches pointant vers le haut\n",
-    ">     la ligne et le moment où à commencé le problème\n",
-    ">\n",
-    "> -   les **exceptions**: le code est syntaxiquement correct mais\n",
-    ">     produit une erreur lors de son exécution, comme la division par\n",
-    ">     zéro effectuée plus haut.\n",
-    ">\n",
-    "> Pourquoi alors est-il important de distinguer ces deux types d’erreur\n",
-    "> ? Car là où une syntaxe incorrecte génère nécessairement une\n",
-    "> `SyntaxError` et arrête l’exécution du code, une exception peut être\n",
-    "> gérée dans le code. Par exemple, dans le cadre d’un code où l’on\n",
-    "> réaliserait de multiples divisions avec des paramètres multiples, on\n",
-    "> pourrait vouloir faire en sorte qu’une division par zéro ne renvoie\n",
-    "> pas une erreur qui interrompe l’exécution du code, mais une valeur\n",
-    "> arbitraire (infini, valeur manquante…).\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    " <b>Erreurs de syntaxe et exception</b>\n",
+    " \n",
+    "Depuis le début du TP, on a vu plusieurs erreurs produites par le\n",
+    "code. En pratique, il est important de distinguer deux types d’erreurs\n",
+    ":\n",
+    "\n",
+    "-   les **erreurs de syntaxe**: le code ne respecte pas les règles de\n",
+    "    syntaxe de Python, comme l’erreur ci-dessus. Le `Traceback`\n",
+    "    (message d’erreur) indique avec des flèches pointant vers le haut\n",
+    "    la ligne et le moment où à commencé le problème\n",
+    "\n",
+    " -   les **exceptions**: le code est syntaxiquement correct mais\n",
+    "     produit une erreur lors de son exécution, comme la division par\n",
+    "     zéro effectuée plus haut.\n",
+    "\n",
+    " Pourquoi alors est-il important de distinguer ces deux types d’erreur\n",
+    " ? Car là où une syntaxe incorrecte génère nécessairement une\n",
+    " `SyntaxError` et arrête l’exécution du code, une exception peut être\n",
+    " gérée dans le code. Par exemple, dans le cadre d’un code où l’on\n",
+    " réaliserait de multiples divisions avec des paramètres multiples, on\n",
+    " pourrait vouloir faire en sorte qu’une division par zéro ne renvoie\n",
+    " pas une erreur qui interrompe l’exécution du code, mais une valeur\n",
+    " arbitraire (infini, valeur manquante…).\n",
+    " </div>\n",
     "\n",
     "Pour éviter l’erreur de syntaxe, il faut varier les caractères en cas de\n",
     "besoin :"
@@ -481,7 +485,18 @@
    "execution_count": null,
    "id": "ba57480d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLes cellules en cours d’exécution avec Python 3.10.13 nécessitent le package ipykernel.\n",
+      "\u001b[1;31mExécutez la commande suivante pour installer 'ipykernel' dans l’environnement Python. \n",
+      "\u001b[1;31mCommande : '/usr/local/bin/python3.10 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "len(\"J'ai 18 caractères\")"
    ]
@@ -526,7 +541,9 @@
     "plus 1, et `c` le pas de l’indexation. Tout cela sera plus clair avec\n",
     "les exemples suivants.\n",
     "\n",
-    "Note importante : **l’indexation commence à 0 en Python**."
+    "<div class=\"alert alert-block alert-info\">\n",
+    "⚠️  Note importante : <b>l’indexation commence à 0 en Python</b>.\n",
+    "</div>"
    ]
   },
   {
@@ -632,9 +649,11 @@
    "id": "310d7aa1-38e2-439c-9aa0-ce1c34bda49c",
    "metadata": {},
    "source": [
-    "A retenir : c’est bien parce qu’un *string* est considéré comme une\n",
-    "séquence par Python que l’on peut l’indexer. Par exemple, indexer un\n",
-    "nombre n’a pas de sens, et renvoie donc une erreur."
+    "<div class=\"alert alert-block alert-info\">\n",
+    "⚠️  A retenir : c’est bien parce qu’un <b>string</b> est considéré comme une\n",
+    "<b>séquence</b> par Python que l’on peut l’indexer. Par exemple, indexer un\n",
+    "nombre n’a pas de sens, et renvoie donc une erreur.\n",
+    "</div>"
    ]
   },
   {
@@ -770,7 +789,7 @@
     "réutiliser un objet et lui appliquer plusieurs transformations ? Ou\n",
     "faire des opérations à partir de différents objets ?\n",
     "\n",
-    "Pour cela, on va assigner les objets à des variables.\n",
+    "Pour cela, on va assigner les objets à des **variables**.\n",
     "\n",
     "### Assignation et opérations\n",
     "\n",
@@ -860,7 +879,18 @@
    "execution_count": null,
    "id": "133fb55b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLes cellules en cours d’exécution avec Python 3.10.13 nécessitent le package ipykernel.\n",
+      "\u001b[1;31mExécutez la commande suivante pour installer 'ipykernel' dans l’environnement Python. \n",
+      "\u001b[1;31mCommande : '/usr/local/bin/python3.10 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "x = \"test\"\n",
     "y = 3\n",
@@ -1462,11 +1492,7 @@
     "\n",
     "-   “2024”\n",
     "\n",
-    "Trouvez à partir du tutoriel deux manières différentes de les utiliser\n",
-    "pour composer la séquence “nous sommes en 2024”.\n",
-    "\n",
-    "**Indice** : l’une des deux méthodes implique de modifier (légèrement)\n",
-    "une des deux séquences."
+    "Proposez une manière de composer la séquence “nous sommes en 2024”.\n"
    ]
   },
   {
@@ -1494,11 +1520,9 @@
     "\n",
     "``` python\n",
     "a1 = \"nous sommes en\"\n",
-    "a2 = \"nous sommes en {}\"\n",
     "b = \"2024\"\n",
     "\n",
     "print(a1 + \" \" + b)\n",
-    "print(a2.format(b))\n",
     "```\n",
     "\n",
     "</details>"
@@ -1514,7 +1538,7 @@
     "Les `f-strings` sont une forme de *strings* un peu particulière mais\n",
     "très pratique, qui ont été ajoutés dans la version 3.6 de `Python`. Pour\n",
     "comprendre leur intérêt, repartons de la solution de l’exercice\n",
-    "précédent, qui illustrait deux manières de composer la chaîne “nous\n",
+    "précédent, qui illustrait une manière de composer la chaîne “nous\n",
     "sommes en 2024”."
    ]
   },
@@ -1526,11 +1550,9 @@
    "outputs": [],
    "source": [
     "a1 = \"nous sommes en\"\n",
-    "a2 = \"nous sommes en {}\"\n",
     "b = \"2024\"\n",
     "\n",
-    "print(a1 + \" \" + b)\n",
-    "print(a2.format(b))"
+    "print(a1 + \" \" + b)"
    ]
   },
   {
@@ -1538,19 +1560,11 @@
    "id": "7baa0c05-7905-4666-9003-c8cbe6451ea7",
    "metadata": {},
    "source": [
-    "Ces deux méthodes fonctionnent mais présentent des limites. Réfléchissez\n",
+    "Cette méthode fonctionne mais présente des limites. Réfléchissez\n",
     "à ce qui se passerait dans les cas suivants, et n’hésitez pas à faire\n",
     "des tests pour vous en convaincre :\n",
     "\n",
-    "-   si l’on souhaite injecter via la méthode `format()` une variable qui\n",
-    "    n’est pas un *string* (ex : si “2024” était un entier et non un\n",
-    "    *string*) ?\n",
-    "\n",
     "-   si l’on souhaite concaténer plusieurs *strings* ensemble ?\n",
-    "\n",
-    "-   si l’on souhaite concaténer plusieurs *strings* ensemble et qu’en\n",
-    "    plus on souhaite injecter les valeurs d’autres variables dans chaque\n",
-    "    partie ?\n",
     "\n",
     "En vous inspirant de la [documentation\n",
     "officielle](https://docs.python.org/fr/3/tutorial/inputoutput.html#formatted-string-literals),\n",
@@ -1607,20 +1621,6 @@
     "La syntaxe devient vite illisible, car il faut ajouter les séparateurs\n",
     "(espace) manuellement entre chaque partie.\n",
     "\n",
-    "Troisième problème : composition de chaînes de caractères avec injection\n",
-    "de variables.\n",
-    "\n",
-    "``` python\n",
-    "a = \"nous sommes en {}\"\n",
-    "b = \"2024\"\n",
-    "c = \"et je m'appelle {}\"\n",
-    "d = \"Miranda\"\n",
-    "\n",
-    "print(a.format(b) + \" \" + c.format(d))\n",
-    "```\n",
-    "\n",
-    "La syntaxe reste peu lisibile, car il faut injecter les valeurs dans\n",
-    "chaque chaîne.\n",
     "\n",
     "Solution : avec les f-strings.\n",
     "\n",
@@ -1639,10 +1639,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3",
-   "path": "/Users/gblin/opt/anaconda3/share/jupyter/kernels/python3"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
